  Provers/trancl.ML as additional solvers.  INCOMPATIBILITY: old proofs break
  occasionally as simplification may now solve more goals than previously.

  - Converts x <= y into x = y if assumption y <= x is present.  Works for
  all partial orders (class "order"), in particular numbers and sets. For
  linear orders (e.g. numbers) it treats ~ x < y just like y <= x.

* HOL: new 'isatool dimacs2hol' to convert files in DIMACS CNF format
  (containing Boolean satisfiability problems) into Isabelle/HOL theories.


*** HOLCF ***

* HOLCF: discontinued special version of 'constdefs' (which used to
  support continuous functions) in favor of the general Pure one with
  full type-inference.


*** ZF ***

* ZF/ex/{Group,Ring}: examples in abstract algebra, including the
  First Isomorphism Theorem (on quotienting by the kernel of a
  homomorphism).

* ZF/Simplifier: install second copy of type solver that actually
  makes use of TC rules declared to Isar proof contexts (or locales);
  the old version is still required for ML proof scripts.



New in Isabelle2004 (April 2004)
--------------------------------

*** General ***

* Provers/order.ML:  new efficient reasoner for partial and linear orders.
  Replaces linorder.ML.

* Pure: Greek letters (except small lambda, \<lambda>), as well as Gothic
  (\<aa>...\<zz>\<AA>...\<ZZ>), calligraphic (\<A>...\<Z>), and Euler
  (\<a>...\<z>), are now considered normal letters, and can therefore
  be used anywhere where an ASCII letter (a...zA...Z) has until
  now. COMPATIBILITY: This obviously changes the parsing of some
  terms, especially where a symbol has been used as a binder, say
  '\<Pi>x. ...', which is now a type error since \<Pi>x will be parsed
  as an identifier.  Fix it by inserting a space around former
  symbols.  Call 'isatool fixgreek' to try to fix parsing errors in
  existing theory and ML files.

* Pure: Macintosh and Windows line-breaks are now allowed in theory files.
